--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -66,7 +66,7 @@
 \def\rsquo{'}
 
 
-%\submitted{Submit ted \today}
+%\submitted{Submitted \today}
 
 \begin{document}
 
@@ -164,19 +164,17 @@ X-ray binaries containing accreting black holes can be divided into two categori
 
 \textbf{Black Hole Masses:} 
 Black-hole X-ray binaries with dynamical mass measurements provide the only secure measurements of black hole masses other than the gravitational-wave observations described above.  \citet{Ozel:2010} and \citet{Farr:2011} summarize the mass distribution of black-hole X-ray binaries; they find a distribution which ranges from 4 or 5 solar masses for the lightest low-mass X-ray binaries (with a possible mass gap between neutron star and black hole masses) to $\sim 15\, M_\odot$ or more for the heaviest high-mass X-ray binaries.  However, given the doubts subsequently placed on the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015}, there are no known black holes with dynamically confirmed masses certain to exceed $15\, M_\odot$.  The measured masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses}, along with the masses of the observed gravitational-wave sources.  This figure does not include the speculative but potentially very exciting evidence for intermediate-mass black holes \citep{MillerColbert:2004,Pasham:2014}; if such few-hundred solar-mass black holes generically exist in globular clusters, they will be detectable as gravitational-wave sources \citep[e.g.,][]{Mandel:2008,IMBBH:O1}.
-%\todo{Add GC X-ray binary observations} 
 
 \begin{figure}
 	\centering
-	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
-	\includegraphics[width=0.99\textwidth]{Graveyard.png}%{BHmass.png}
+	\includegraphics[width=0.99\textwidth]{Graveyard.png}
 	\caption{\label{fig:BHmasses}  The masses (in solar masses, vertical axis) of black holes observed as gravitational-wave sources (blue), as well as masses of black holes in X-ray binaries (purple).  Galactic neutron stars observed as radio pulsars (yellow) and the merging double neutron star GW170817 (orange) appear at the bottom of the figure.  Merger product masses are shown for gravitational-wave detections. Placement on the horizontal axis is arbitrary.  Error bars are indicative of the measurement uncertainty.  Figure courtesy of Frank Elavsky, Northwestern University and LIGO-Virgo collaborations.}
 \end{figure}
 
 
 \textbf{Black Hole Spin Magnitudes:} Black hole X-ray binaries also provide an opportunity for measuring black hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the accretion disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, which is assumed to correspond to the radius of the innermost stable circular orbit, a sensitive function of black hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the inferred spins may suffer from significant systematics.  For example, out of six systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level for two systems, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$.  However, for the remaining three systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
 
-\textbf{Inconsistency with Spin Observations from Gravitational-Wave Sources?} These high-spin observations include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  Isolated binaries that form binary black holes are expected to go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, then either some future merging binary black holes should be observed to have high spins like those in X-ray binaries, or, perhaps more likely, the observed high-mass X-ray binaries and merging binary black holes sample different evolutionary histories (see \autoref{BHspins}).
+\textbf{Inconsistency with Spin Observations from Gravitational-wave Sources?} These high-spin observations include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  Isolated binaries that form binary black holes are expected to go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, then either some future merging binary black holes should be observed to have high spins like those in X-ray binaries, or, perhaps more likely, the observed high-mass X-ray binaries and merging binary black holes sample different evolutionary histories (see \autoref{BHspins}).
 
 \textbf{Black Hole Spin Directions:} We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the microquasar jet, presumably aligned with the BH spin axis, is misaligned with the orbit.  Moreover, initial stellar spins in binaries have been observed to be misaligned \citep[e.g.,][]{Albrecht:2009,Albrecht:2014}, though there are opportunities for realignment during binary evolution, as described below.
 
@@ -188,33 +186,12 @@ When the detection of GW150914 was first announced, many were surprised that it 
 \subsection{The Separation Question}
 
 
-%\begin{floatingfigure}[l]{0.5\textwidth}
-%%\begin{minipage}[c]{0.45\textwidth}
-%    	\includegraphics[width=\textwidth]{M-rp-log.png}%[width=\textwidth]{M-rp-log.png}
-%	\caption{Maximum initial periapsis separation that a binary black hole with equal-mass components (as given on the ordinate) can have while still merging within the age of the Universe through gravitational-wave emission, for four different choices of initial eccentricity: $e=0$, 0.9, 0.99, and 0.999 from the top down.\label{fig:periapsis}}
-%%	\end{minipage}
-%	\vspace{-0.8in}
-%\end{floatingfigure}	
-
 \textbf{Only very tight binaries can merge via gravitational waves.} Gravitational-wave emission is a very strong function of separation. During a compact binary merger, the luminosity in gravitational waves is a few thousandths of the Planck luminosity, $c^5/G$ \citep[e.g.,][]{Cardoso:2018}; at nearly $10^{57}$ ergs per second, such mergers ``outshine'' all the stars in the visible Universe combined. But because gravitational-wave luminosity is inversely proportional to the fifth power of the binary separation \citep{Peters:1964}, widely separated binaries lose energy very slowly and undergo only negligible inspiral over billions of years. Only very close binaries can be brought to merger by gravitational waves within the age of the universe; \autoref{fig:periapsis} shows the maximum initial separation for an equal-mass binary to merge on this timescale. For the two 30 $M_\odot$ black holes responsible for GW150914, the initial separation must have been less than $\sim 50 R_\odot$ -- just a quarter of the distance from the Earth to the Sun -- if the merger was driven by gravitational-wave emission alone.
 
 
 \textbf{But the black holes' parent stars can't get so close.} Stars expand as they evolve. Even our Sun will reach roughly an astronomical unit in size during its giant phase; the stars (above $\sim 20 M_\odot$  at birth) that leave behind black holes may reach thousands of solar radii at their maximal extent. The maximum stellar radius as a function of initial mass is plotted in \autoref{fig:Rmax}. We appear to have a problem. If the parent stars begin life at separations from which gravitational waves could bring their remnants together, the stars will expand to sizes larger than their separation as they evolve, and we might therefore expect that they would merge long before they collapse into black holes. If they start sufficiently far apart to avoid merger before collapse, their remnant binaries will take many millions of times the age of the universe to merge. In either case, no gravitational-wave sources would exist today. 
 
 \textbf{The problem is already there at birth.} In fact, for reasonable models of wind-driven mass loss and mass loss during supernovae, even the initial stellar radii at the start of the main sequence are too large to fit into a binary that could merge within the age of the Universe just through gravitational-wave emission.  The black `Roche Lobe' curve in \autoref{fig:Rmax} shows the maximum size that a star could have in order to fit into a circular, merging equal-mass binary (see \autoref{fig:periapsis}).  This size is smaller than the zero-age main sequence radius for all stellar masses shown in the figure: the separation problem thus exists even without accounting for the exacerbating factors of stellar expansion or binary widening through mass loss.
- 
- 
-%\begin{floatingfigure}[l]{7cm}%{0.5\textwidth}
-%%  \hspace{-0.20in}
-%%\begin{minipage}[c]{7cm}%{0.5\textwidth}
-%    	\includegraphics*[width=7cm]{M-rp-log.png}%[width=\textwidth]{M-rp-log.png}
-%%  \end{minipage}\hfill
-%%  \begin{minipage}[c]{0.15\textwidth}
-%	\caption{Maximum initial periapsis separation that a binary black hole with equal-mass components (as given on the ordinate) can have while still merging within the age of the Universe through gravitational-wave emission, for four different choices of initial eccentricity: $e=0$, 0.9, 0.99, and 0.999 from the top down.\label{fig:periapsis}}
-%%\end{minipage}\hfill    
-%%\vspace{-0.1mm}
-%\noindent \hrulefill
-%\end{floatingfigure}
 
 
 \begin{figure}
@@ -412,7 +389,6 @@ The intense radiation from massive stars with luminosities $\sim 10^5 L_\odot$ d
  
 \begin{figure}
 	\centering
-	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
 	\includegraphics[width=0.5\textwidth]{BHremnantdelayed.png}
 	\caption{\label{fig:BHremnant} Remnant compact object mass from single stellar evolution for a given zero-age main sequence stellar mass, following the default COMPAS prescription for winds \citep{Stevenson:2017}  and the `delayed' \citet{Fryer:2012} supernova fallback prescription, at solar ($Z_\odot=0.02$) metallicity (blue) and a tenth solar (red).  COMPAS sets a compact object mass threshold of $2.5 M_\odot$ between neutron stars and black holes.
 	} 
@@ -426,10 +402,10 @@ The above considerations place constraints on the formation time of the systems 
 
 \section{Prospects for gravitational-wave astronomy}\label{prospect}
 
-The half dozen gravitational-wave events observed to date provide limited conclusive information about the astrophysics of binary black holes and their progenitors.  Fortunately, these observations indicate a binary black hole merger rate of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104}, which points to the prospect of \ilya{a few} tens of detections in the next observing run and hundreds within the next three years, once the LIGO and Virgo instruments reach design sensitivity \citep{scenarios}.  This will yield enough information about both individually exciting events and population distributions to inaugurate gravitational-wave astronomy as a genuine tool for exploring stellar and binary evolution.  In this section, we describe some of the prospects for extracting information from the growing data set of observations over the next few years, including single informative observations, population statistical inference, and theoretical modeling.
+The half dozen gravitational-wave events observed to date provide limited conclusive information about the astrophysics of binary black holes and their progenitors.  Fortunately, these observations indicate a binary black hole merger rate of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104}, which points to the prospect of a few tens of detections in the next observing run and hundreds within the next three years, once the LIGO and Virgo instruments reach design sensitivity \citep{scenarios}.  This will yield enough information about both individually exciting events and population distributions to inaugurate gravitational-wave astronomy as a genuine tool for exploring stellar and binary evolution.  In this section, we describe some of the prospects for extracting information from the growing data set of observations over the next few years, including single informative observations, population statistical inference, and theoretical modeling.
 
 \subsection{Individual exciting events}
-Single events that would be individually informative include the discovery of a merging binary black hole with a component mass in the pair-instability supernova mass gap.  Models of pair instability supernovae suggest that no black holes with masses between $\sim 60 M_\odot$ (possibly reduced to $\sim 45 M_\odot$ by pulsational pair instability \citep{Woosley:2017}) and $\sim 130 M_\odot$ should form as a result of stellar collapse, with black hole formation possible \ilya{only outside this} mass gap \citep{Marchant:2016}.  Therefore, \ajf{the} discovery of a single object in this mass gap would point to either past dynamical mergers that left the merger remnant to be reused in a dense stellar environment \citep{Rodriguez:2018}, or to a theoretical failure in pair instability models. 
+Single events that would be individually informative include the discovery of a merging binary black hole with a component mass in the pair-instability supernova mass gap.  Models of pair instability supernovae suggest that no black holes with masses between $\sim 60 M_\odot$ (possibly reduced to $\sim 45 M_\odot$ by pulsational pair instability \citep{Woosley:2017}) and $\sim 130 M_\odot$ should form as a result of stellar collapse, with black hole formation possible only outside this mass gap \citep{Marchant:2016}.  Therefore, the discovery of a single object in this mass gap would point to either past dynamical mergers that left the merger remnant to be reused in a dense stellar environment \citep{Rodriguez:2018}, or to a theoretical failure in pair instability models. 
 
 Similarly, the discovery of a merger component with a mass between $\sim 2.1 M_\odot$ and $\sim 4.5 M_\odot$, in the range between the most massive known neutron stars and least massive black holes \citep{Ozel:2010,Farr:2011} would shed light on supernova explosion models, specifically the amount of fallback that can occur before the explosion \citep{Fryer:2012}.
 
@@ -439,7 +415,7 @@ A source with a detectable eccentricity would clearly signal a dynamical capture
 
 A measurement of an effective spin value close to either 1 or $-1$ would point to rapid spins of both black holes. A substantial positive effective spin coupled with high masses would point to the likelihood of chemically homogeneous formation \citep{Marchant:2016}, while a substantially negative effective spin measurement would indicate an unexpected anti-alignment between rapid spins and the binary's orbital angular momentum, perhaps through either a supernova spin tilt or dynamical formation.  
 
-\ilya{Although electromagnetic transients are not broadly expected to be associated with binary black hole mergers \citep[e.g.,][]{Lyutikov:2016}, any such observations would indicate the persistence of material around the merging binary \citep[e.g.,][]{deMinkKing:2017}.}
+Although electromagnetic transients are not broadly expected to be associated with binary black hole mergers \citep[e.g.,][]{Lyutikov:2016}, any such observations would indicate the persistence of material around the merging binary \citep[e.g.,][]{deMinkKing:2017}.
 
 \subsection{Population statistics}
 
@@ -447,14 +423,14 @@ Population statistics will generally yield more information than individual even
 
 At the most basic end of weakly modeled inference is the (possibly non-parametric) reconstruction of an underlying distribution, such as the mass function of merging black holes \citep{Mandel:2010stat,BBH:O1}, while accounting for measurement uncertainties and selection effects.  For example, \citet{Fishbach:2017mass} use a weakly parametrized model to argue for the possible evidence of a mass gap due to pair-instability supernovae, while \citet{TalbotThrane:2017} discuss weakly parametrized inference on the spin distributions.  Meanwhile, the time delay between star formation and binary merger could be extracted by comparing the merger rate as a function of redshift against the star formation rate as a function of redshift \citep{Mandel:2016select}.  
 
-We can look for distinct subpopulations or \ajf{``}clusters\ajf{''} of events in the observable parameter space\ajf{,} in the hope of finding distinct categories corresponding to different evolutionary channels.  \citet{Mandel:2015} argued that $\sim 60$ observations would make it possible to determine whether there are distinct subpopulations of events in mass space even after allowing for the significant measurement uncertainties inherent in gravitational-wave astronomy, and \citet{Mandel:2016cluster} demonstrated the feasibility of a particular clustering technique.  Meanwhile, \citet{Farr:2018} propose classifying binary black hole mergers by spin misalignment angle into aligned and isotropically distributed subpopulations.  It is worth noting that such clustering or classification schemes cannot hope to correctly assign individual events to a specific cluster\ajf{: this} is generally impossible given the significant measurement uncertainties \citep{Littenberg:2015}; instead, the goal is to measure the relative frequencies of events in different categories.
+We can look for distinct subpopulations or ``clusters'' of events in the observable parameter space, in the hope of finding distinct categories corresponding to different evolutionary channels.  \citet{Mandel:2015} argued that $\sim 60$ observations would make it possible to determine whether there are distinct subpopulations of events in mass space even after allowing for the significant measurement uncertainties inherent in gravitational-wave astronomy, and \citet{Mandel:2016cluster} demonstrated the feasibility of a particular clustering technique.  Meanwhile, \citet{Farr:2018} propose classifying binary black hole mergers by spin misalignment angle into aligned and isotropically distributed subpopulations.  It is worth noting that such clustering or classification schemes cannot hope to correctly assign individual events to a specific cluster: this is generally impossible given the significant measurement uncertainties \citep{Littenberg:2015}; instead, the goal is to measure the relative frequencies of events in different categories.
 
-The next level of population-based inference relies on assuming that precise, possibly parametrized, subpopulation distributions are known.  In this case, hierarchical modeling \citep[extreme deconvolution in the language of][]{Hogg:2010} can be used to simultaneously determine the ratios of different subpopulations (e.g., arising from different formation channels) and any free parameters in the subpopulation models.  \citet{Zevin:2017} found that with $\sim 100$ observations, the mass distribution alone could be used to determine the formation channel, assuming the availability of trustworthy models of the mass distribution under different formation channels.  \citet{Vitale:2015} and \citet{Stevenson:2017spin} carry out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels through hierarchical modeling \ajf{--- again}, if the distributions under different channels are known \citep{Stevenson:2017spin}.  
+The next level of population-based inference relies on assuming that precise, possibly parametrized, subpopulation distributions are known.  In this case, hierarchical modeling \citep[extreme deconvolution in the language of][]{Hogg:2010} can be used to simultaneously determine the ratios of different subpopulations (e.g., arising from different formation channels) and any free parameters in the subpopulation models.  \citet{Zevin:2017} found that with $\sim 100$ observations, the mass distribution alone could be used to determine the formation channel, assuming the availability of trustworthy models of the mass distribution under different formation channels.  \citet{Vitale:2015} and \citet{Stevenson:2017spin} carry out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels through hierarchical modeling --- again, if the distributions under different channels are known \citep{Stevenson:2017spin}.  
 
-\subsection{\ilya{The future of} population synthesis techniques}
-There is, of course, a multitude of uncertain physics within any given model, both limiting the usefulness of approaches that rely on a precise knowledge of subpopulation distributions and, more importantly, providing a set of key science questions that we would like to answer with the aid of gravitational-wave observations.  How much mass do stars lose in winds, and what is the precise impact of metallicity and rotation on stellar evolution \citep[e.g.,][]{Renzo:2017}?  What happens to the star's angular momentum during collapse, how much mass is ejected, and how much of an asymmetric kick does the \ajf{remnant} receive \citep[e.g.,][]{Mirabel:2016}? How conservative is mass transfer in binaries\ajf{,} and how much angular momentum is carried away by the mass lost from the binary during non-conservative mass transfer \citep[e.g.,][]{vandenHeuvel:2017,Kruckow:2018}?  What are the conditions for the onset of a common-envelope phase and common envelope ejection, and how does the binary change in the process \citep[e.g.,][]{Ivanova:2013,Kruckow:2016}?   How do dynamical interactions affect binary evolution?  And, in turn, how do massive stellar binaries and their compact remnants feed back into astrophysics and cosmology on all scales?
+\subsection{The future of population synthesis techniques}
+There is, of course, a multitude of uncertain physics within any given model, both limiting the usefulness of approaches that rely on a precise knowledge of subpopulation distributions and, more importantly, providing a set of key science questions that we would like to answer with the aid of gravitational-wave observations.  How much mass do stars lose in winds, and what is the precise impact of metallicity and rotation on stellar evolution \citep[e.g.,][]{Renzo:2017}?  What happens to the star's angular momentum during collapse, how much mass is ejected, and how much of an asymmetric kick does the remnant receive \citep[e.g.,][]{Mirabel:2016}? How conservative is mass transfer in binaries, and how much angular momentum is carried away by the mass lost from the binary during non-conservative mass transfer \citep[e.g.,][]{vandenHeuvel:2017,Kruckow:2018}?  What are the conditions for the onset of a common-envelope phase and common envelope ejection, and how does the binary change in the process \citep[e.g.,][]{Ivanova:2013,Kruckow:2016}?   How do dynamical interactions affect binary evolution?  And, in turn, how do massive stellar binaries and their compact remnants feed back into astrophysics and cosmology on all scales?
 
-One approach to addressing these big questions is to use the framework of population synthesis, which makes it possible to parametrize the uncertain physics and predict the expected source rates and distributions under different models.  Most efforts to date have relied on a discrete set of a few models in the parameter space of population synthesis assumptions \citep[e.g.,][]{Dominik:2012,Stevenson:2015}.  Even with the low computational cost of population synthesis, it is not feasible to explore more than a few tens to a few hundred models, \ajf{and this} is not sufficient to cover the full parameter space or \ajf{to} consider the correlations between model parameters.  However, recent successes in building accurate and computationally efficient emulators over the model parameter space \citep{Barrett:2017} suggest that a full exploration of this space will soon be possible. \citet{Barrett:2017FIM} applied Fisher information matrix techniques to the space of model parameters and found that parameters such as \ajf{those relating to} mass loss rates during the Wolf-Rayet and luminous blue variable phases\ajf{ of evolution, and to }common envelope energetics, can be measured to the level of a few percent with a thousand detections. 
+One approach to addressing these big questions is to use the framework of population synthesis, which makes it possible to parametrize the uncertain physics and predict the expected source rates and distributions under different models.  Most efforts to date have relied on a discrete set of a few models in the parameter space of population synthesis assumptions \citep[e.g.,][]{Dominik:2012,Stevenson:2015}.  Even with the low computational cost of population synthesis, it is not feasible to explore more than a few tens to a few hundred models, and this is not sufficient to cover the full parameter space or to consider the correlations between model parameters.  However, recent successes in building accurate and computationally efficient emulators over the model parameter space \citep{Barrett:2017} suggest that a full exploration of this space will soon be possible. \citet{Barrett:2017FIM} applied Fisher information matrix techniques to the space of model parameters and found that parameters such as those describing mass loss rates during the Wolf-Rayet and luminous blue variable phases of evolution, and common envelope energetics, can be measured to the level of a few percent with a thousand detections. 
 
 \subsection{Other datasets and future missions}
 Additional observational datasets will further aid in interpreting gravitational-wave observations and in refining models of binary stellar evolution.
@@ -465,19 +441,17 @@ Ultimately, the most useful constraints are likely to come from the requirement 
 
 \subsection{Outlook}
 
-\ajf{Today} we have a half-dozen observations of merging binary black holes.  That is a half-dozen more than three years ago, and we have already learned a great deal.  \ilya{B}inary black holes exist. \ilya{T}hey merge. \ilya{T}hey do so relatively frequently.  \ilya{T}hey have a broad range of masses, and none of the sources seen so far seem to have rapid net spins in the direction of the orbital angular momentum.  We also have several plausible evolutionary channels, some of which appear to explain many of the observed properties (merger rates and masses)\ajf{. Black hole} spins continue to present something of a puzzle, particularly in light of the claimed high spins in a few high-mass black-hole X-ray binaries.
+Today we have a half-dozen observations of merging binary black holes.  That is a half-dozen more than three years ago, and we have already learned a great deal.  Binary black holes exist. They merge. They do so relatively frequently.  They have a broad range of masses, and none of the sources seen so far seem to have rapid net spins in the direction of the orbital angular momentum.  We also have several plausible evolutionary channels, some of which appear to explain many of the observed properties (merger rates and masses). Black hole spins continue to present something of a puzzle, particularly in light of the claimed high spins in a few high-mass black-hole X-ray binaries.
 
 At the same time, we have the tools in place to create detailed models of stellar and binary evolution and of dynamical interactions under a variety of parameterizable assumptions.  The statistical techniques for analyzing the data and inferring properties directly from the observations, or by comparison with the detailed models, are in place.  Most importantly, we have wonderful detectors which are continuing to improve, and we expect to obtain enough data in the next few years to carry out these analyses.  Perhaps in a few years we will know that all of the channels described here contribute non-negligibly to binary black hole formation; that black holes receive small kicks at birth; and that they spin slowly in merging binaries. We may also have made the first detections of new objects such as $200 M_\odot$ intermediate-mass black holes.
 
 The future of gravitational-wave astronomy holds the thrilling prospect of addressing the inverse problem of massive binary stellar evolution: inferring the formation channels and their physics from observations of the merging compact-object binary population.  Like a paleontologist who uses her knowledge of anatomy to determine the appearance, eating habits, and even behavior of extinct dinosaurs from their fossilized remnants, we can now use merging black holes --- remnants of massive stars --- to probe the behavior of those stars, and particularly their evolution in binaries.
-% \citep{MandelFarmer:2017}.   With the data to come and the theoretical developments underway, this future is brightly chirping indeed! 
 
 
 \begin{acknowledgements}
-\ilya{We would like to thank Christopher Berry, Cole Miller, Fred Rasio, Dorottya Sz\'{e}csi, and Thomas Tauris for comments that significantly improved this manuscript, and Lev Yungelson and Ed van den Heuvel for providing a historical perspective.}
+We would like to thank Christopher Berry, Cole Miller, Fred Rasio, Dorottya Sz\'{e}csi, and Thomas Tauris for comments that significantly improved this manuscript, and Lev Yungelson and Ed van den Heuvel for providing a historical perspective.
 
-%IM thanks all of the people who have guided him to understand stellar and binary evolution, foremost among them Selma de Mink.   
-\ilya{IM is grateful to the students who contributed to building COMPAS (Simon Stevenson, Alejandro Vigna G\'{o}mez, Coenraad Neijssel, Jim Barrett, Sebastian Gaebel) and external collaborators (including Stephen Justham, Philipp Podsiadlowski, and especially Selma de Mink).  Coenraad Neijssel deserves additional gratitude for assistance with figures \ref{fig:Rmax} and \ref{fig:BHremnant}. Thanks also to  Will Farr, Vicky Kalogera and Gijs Nelemans for stimulating discussions spanning many years.}
+IM is grateful to the students who contributed to building COMPAS (Jim Barrett, Sebastian Gaebel, Coenraad Neijssel, Simon Stevenson, Alejandro Vigna G\'{o}mez) and external collaborators (including Stephen Justham, Philipp Podsiadlowski, and especially Selma de Mink).  Coenraad Neijssel deserves additional gratitude for assistance with figures \ref{fig:Rmax} and \ref{fig:BHremnant}. Thanks also to  Will Farr, Vicky Kalogera and Gijs Nelemans for stimulating discussions spanning many years.
 
 AF is grateful for the astro-tourism.
 \end{acknowledgements}
