--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -1,5 +1,5 @@
 %\documentclass[iop,twocolumn, tighten, twocolappendix, numberedappendix]{emulateapj}
-\documentclass[iop,onecolumn]{revtex4}
+\documentclass[iop,onecolumn]{revtex4-1}
 
 \usepackage[backref,breaklinks,colorlinks,citecolor=blue]{hyperref}  
 \usepackage[all]{hypcap}
